# pikszis_community_tool

./: .gitignore  Dockerfile  Makefile  README.md  bcrypt.py  docker-compose.yml  pyproject.toml  requirements.txt  supabase_schema.sql
app/: config.py  deps.py  main.py  security.py  supabase_client.py
app/db/: ensure_schema.sql  questionnaire_database.sql  questionnaires.py  questions.py  users.py
app/db/importer/: import_from_csv.py
app/db/migrations/: 20250823_add_length_minutes.sql  20250823_add_new_qtypes.sql  20250823_admin_questionnaire_builder.sql  20250823_question_options.sql
app/models/: auth.py
app/routers/: admin_questionnaires.py  auth.py  hub.py  questionnaire_api.py  random_api.py
app/services/: answers.py  selection.py  submissions.py
app/static/: hub.css  hub.js
app/static/js/: admin_questions.js
app/templates/: auth_login.html  auth_register.html  base.html  embed_hub.html  hub.html  questionnaire_list.html  questionnaire_runner.html  random_question_card.html
app/templates/admin/: question_form.html  questionnaire_edit.html  questionnaire_form.html  questionnaires.html  questions.html
app/templates/layouts/: login_base.html
app/templates/qtypes/: likert_1_4.html  likert_1_5.html  likert_slider_1_4.html  likert_slider_1_5.html  open_long.html  open_multiple.html  open_short.html
schema/csv/: questionnaires.utf8.csv  questions.utf8.csv
tests/: conftest.py  test_auth.py  test_questionnaire.py  test_selection.py
